--- a/src/app/components/public/about/about.component.html
+++ b/src/app/components/public/about/about.component.html
@@ -2,179 +2,168 @@
 <app-navbar></app-navbar>
 <!-- Navbar End -->
 
-<!-- Header Start -->
-<div class="container-fluid bg-primary py-5 mb-5 page-header">
-    <div class="container py-5">
-        <div class="row justify-content-center">
-            <div class="col-lg-10 text-center">
-                <h1 class="display-3 text-white animated slideInDown">About Us</h1>
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item"><a class="text-white" href="#">Accuiel</a></li>
-                        <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">About</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Header End -->
-
-
-
 <!-- Service Start -->
 <div class="container-xxl py-5">
-    <div class="container">
-      <div class="row g-4">
-        <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-          <div class="service-item text-center pt-3">
-            <div class="p-4">
-              <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-              <h5 class="mb-3">Des Instructeurs Qualifiés
-              </h5>
-              <p>
-                Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
-                diam
-              </p>
-            </div>
+  <div class="container">
+    <div class="row g-4">
+      <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="service-item text-center pt-3">
+          <div class="p-4">
+            <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
+            <h5 class="mb-3">Des Instructeurs Qualifiés</h5>
+            <p>
+              Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
+              diam
+            </p>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-          <div class="service-item text-center pt-3">
-            <div class="p-4">
-              <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-              <h5 class="mb-3">Les Classes En Ligne            </h5>
-              <p>
-                Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
-                diam
-              </p>
-            </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="service-item text-center pt-3">
+          <div class="p-4">
+            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
+            <h5 class="mb-3">Les Classes En Ligne</h5>
+            <p>
+              Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
+              diam
+            </p>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-          <div class="service-item text-center pt-3">
-            <div class="p-4">
-              <i class="fa fa-3x fa-home text-primary mb-4"></i>
-              <h5 class="mb-3">Projet A La Maison</h5>
-              <p>
-                Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
-                diam
-              </p>
-            </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+        <div class="service-item text-center pt-3">
+          <div class="p-4">
+            <i class="fa fa-3x fa-home text-primary mb-4"></i>
+            <h5 class="mb-3">Projet A La Maison</h5>
+            <p>
+              Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
+              diam
+            </p>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-          <div class="service-item text-center pt-3">
-            <div class="p-4">
-              <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-              <h5 class="mb-3">Bibliothèque De Livres</h5>
-              <p>
-                Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
-                diam
-              </p>
-            </div>
+      </div>
+      <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
+        <div class="service-item text-center pt-3">
+          <div class="p-4">
+            <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
+            <h5 class="mb-3">Bibliothèque De Livres</h5>
+            <p>
+              Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
+              diam
+            </p>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!-- Service End -->
-  
-  <!-- About Start -->
-  <div class="container-xxl py-5">
-    <div class="container">
-      <div class="row g-5">
-        <div
-          class="col-lg-6 wow fadeInUp"
-          data-wow-delay="0.1s"
-          style="min-height: 400px"
-        >
-          <div class="position-relative h-100">
-            <img
-              class="img-fluid position-absolute w-100 h-100"
-              src="assets/img/about.jpg"
-              alt=""
-              style="object-fit: cover"
-            />
-          </div>
-        </div>
-        <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-          <h6 class="section-title bg-white text-start text-primary pe-3">
-            A propos de nous
-          </h6>
-          <h1 class="mb-4">Bienvenue dans l'elearning</h1>
-          <p class="mb-4">
-            Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-            diam amet diam et eos. Clita erat ipsum et lorem et sit.
-          </p>
-          <p class="mb-4">
-            Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-            diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-            lorem sit clita duo justo magna dolore erat amet
-          </p>
-          <div class="row gy-2 gx-4 mb-4">
-            <div class="col-sm-6">
-              <p class="mb-0">
-                <i class="fa fa-arrow-right text-primary me-2"></i>Des Instructeurs Qualifiés
-              </p>
-            </div>
-            <div class="col-sm-6">
-              <p class="mb-0">
-                <i class="fa fa-arrow-right text-primary me-2"></i>Les Classes En Ligne 
-              </p>
-            </div>
-            <div class="col-sm-6">
-              <p class="mb-0">
-                <i class="fa fa-arrow-right text-primary me-2"></i>International
-                Certificate
-              </p>
-            </div>
-            <div class="col-sm-6">
-              <p class="mb-0">
-                <i class="fa fa-arrow-right text-primary me-2"></i>Bibliothèque De Livres
-              </p>
-            </div>
-            <div class="col-sm-6">
-              <p class="mb-0">
-                <i class="fa fa-arrow-right text-primary me-2"></i>Les Classes En Ligne
-              </p>
-            </div>
-            <div class="col-sm-6">
-              <p class="mb-0">
-                <i class="fa fa-arrow-right text-primary me-2"></i>certificat international
-              </p>
-            </div>
-          </div>
-          <a class="btn btn-primary py-3 px-5 mt-2" href="">Lire la suite</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- About End -->
+</div>
+<!-- Service End -->
 
+<!-- About Start -->
+<div class="container-xxl py-5">
+  <div class="container">
+    <div class="row g-5">
+      <div
+        class="col-lg-6 wow fadeInUp"
+        data-wow-delay="0.1s"
+        style="min-height: 400px"
+      >
+        <div class="position-relative h-100">
+          <img
+            class="img-fluid position-absolute w-100 h-100"
+            src="assets/img/about.jpg"
+            alt=""
+            style="object-fit: cover"
+          />
+        </div>
+      </div>
+      <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+        <h6 class="section-title bg-white text-start text-primary pe-3">
+          A propos de nous
+        </h6>
+        <h1 class="mb-4">Bienvenue dans l'elearning</h1>
+        <p class="mb-4">
+          Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
+          diam amet diam et eos. Clita erat ipsum et lorem et sit.
+        </p>
+        <p class="mb-4">
+          Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
+          diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
+          lorem sit clita duo justo magna dolore erat amet
+        </p>
+        <div class="row gy-2 gx-4 mb-4">
+          <div class="col-sm-6">
+            <p class="mb-0">
+              <i class="fa fa-arrow-right text-primary me-2"></i>Des
+              Instructeurs Qualifiés
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p class="mb-0">
+              <i class="fa fa-arrow-right text-primary me-2"></i>Les Classes En
+              Ligne
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p class="mb-0">
+              <i class="fa fa-arrow-right text-primary me-2"></i>International
+              Certificate
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p class="mb-0">
+              <i class="fa fa-arrow-right text-primary me-2"></i>Bibliothèque De
+              Livres
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p class="mb-0">
+              <i class="fa fa-arrow-right text-primary me-2"></i>Les Classes En
+              Ligne
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <p class="mb-0">
+              <i class="fa fa-arrow-right text-primary me-2"></i>certificat
+              international
+            </p>
+          </div>
+        </div>
+        <a class="btn btn-primary py-3 px-5 mt-2" href="">Lire la suite</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- About End -->
 
 <!-- Team Start -->
 <div class="container-xxl py-5" *ngIf="trainersList.length > 0">
-
-    <div class="container">
-        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-center text-primary px-3">Instructeurs</h6>
-            <h1 class="mb-5">Nos instructeurs experts</h1>
-        </div>
-        <div class="row g-4 justify-content-center">
-            <div class="col-lg-3 col-md-6 wow fadeInUp"  *ngFor="let trainer of trainersList"  data-wow-delay="0.1s">
-
-                <app-trainer-item [firstname]="trainer.firstname"
-                    [lastname]="trainer.lastname" [speciality]="trainer.speciality" [image]="trainer.image"
-                    [facebook]="trainer.facebook" [instagram]="trainer.instagram" [twitter]="trainer.twitter">
-
-                </app-trainer-item>
-
-            </div>
-        </div>
+  <div class="container">
+    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+      <h6 class="section-title bg-white text-center text-primary px-3">
+        Instructeurs
+      </h6>
+      <h1 class="mb-5">Nos instructeurs experts</h1>
     </div>
-
+    <div class="row g-4 justify-content-center">
+      <div
+        class="col-lg-3 col-md-6 wow fadeInUp"
+        *ngFor="let trainer of trainersList"
+        data-wow-delay="0.1s"
+      >
+        <app-trainer-item
+          [firstname]="trainer.firstname"
+          [lastname]="trainer.lastname"
+          [speciality]="trainer.speciality"
+          [image]="trainer.image"
+          [facebook]="trainer.facebook"
+          [instagram]="trainer.instagram"
+          [twitter]="trainer.twitter"
+        >
+        </app-trainer-item>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- Team End -->
 
