--- a/src/app/components/public/footer/footer.component.html
+++ b/src/app/components/public/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
   <div class="container py-5">
-    <div class="row g-5">
+    <div class="row g-5 mb-4">
       <div class="row g-5">
         <div class="col-lg-3 col-md-6">
           <div class="row g-2">
@@ -64,7 +64,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container ">
       <div class="copyright">
         <div class="row">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
