--- a/src/app/components/public/courses/courses.component.html
+++ b/src/app/components/public/courses/courses.component.html
@@ -6,9 +6,9 @@
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">
-        Categories
+        Nos Catégories
       </h6>
-      <h1 class="mb-5">there is no categories right now, check us later</h1>
+      <h1 class="mb-5">il n'y a pas de catégories pour le moment, vérifiez-nous plus tard</h1>
     </div>
   </div>
 </div>
@@ -18,9 +18,9 @@
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">
-        Categories
+        Nos Catégories
       </h6>
-      <h1 class="mb-5">Courses Categories</h1>
+      <h1 class="mb-5">Tous les catégories</h1>
     </div>
 
     <div class="row g-3 align-items-center justify-content-center d-flex">
@@ -48,9 +48,9 @@
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">
-        courses
+        Nos Formations
       </h6>
-      <h1 class="mb-5">there is no courses right now, check us later</h1>
+      <h1 class="mb-5">il n'y a pas de formation en ce moment, vérifiez-nous plus tard</h1>
     </div>
   </div>
 </div>
@@ -60,9 +60,9 @@
   <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
       <h6 class="section-title bg-white text-center text-primary px-3">
-        Courses
+        Nos Formations
       </h6>
-      <h1 class="mb-5">Popular Courses</h1>
+      <h1 class="mb-5">Formation Populaire</h1>
     </div>
     <div class="row g-4 justify-content-center">
       <div
@@ -99,14 +99,6 @@
           </div>
           <div class="text-center p-4 pb-0 description">
             <h3 class="mb-0">$149.00</h3>
-            <div class="mb-3">
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small>(123)</small>
-            </div>
             <h5 class="mb-4">{{ training.name }}</h5>
           </div>
           <div class="d-flex border-top">
@@ -116,7 +108,7 @@
             >
             <small class="flex-fill text-center border-end py-2"
               ><i class="fa fa-clock text-primary me-2"></i
-              >{{ training.hours }}</small
+              >{{ training.hours }} H</small
             >
             <small class="flex-fill text-center py-2"
               ><i class="fa fa-user text-primary me-2"></i>30 Students</small
