--- a/src/app/components/private/shared/trainings/add-training/add-training.component.html
+++ b/src/app/components/private/shared/trainings/add-training/add-training.component.html
@@ -8,28 +8,35 @@
 
     <div id="layoutSidenav_content">
       <main>
-        <div class="container-fluid px-4 ">
+        <div class="container-fluid px-4">
           <h1 class="mt-4">Formation</h1>
           <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item active">Ajouter un nouveau formateur</li>
-        </ol>
-   
+          </ol>
+
           <form [formGroup]="myForm" (ngSubmit)="add()">
             <div>
               <img
-              [src]="imageUrl"
-              class="image-fluid training-image"
-              alt="" style="width: 150px;" 
-            />
-            <div class="form-group">
-              <input type="file" class="form-control upload-input" (change)="save($event)" id="customFile" />
-            </div>
-           
+                [src]="imageUrl"
+                class="image-fluid training-image"
+                alt=""
+                style="width: 150px"
+              />
+              <div class="form-group">
+                <input
+                  type="file"
+                  class="form-control upload-input"
+                  (change)="save($event)"
+                  id="customFile"
+                />
+              </div>
             </div>
             <div class="form-group">
               <div class="row">
                 <div class="col-lg-6 my-2">
-                  <label for="exampleFormControlFile1">Nom de formation : </label>
+                  <label for="exampleFormControlFile1"
+                    >Nom de formation :
+                  </label>
                 </div>
                 <div class="col-lg-6 my-2">
                   <label for="exampleFormControlFile1">Objectif :</label>
@@ -42,9 +49,12 @@
                     id="name"
                   />
                   <div *ngIf="name?.invalid && name?.touched">
-                    <small *ngIf="name?.errors?.['required']" class="text-danger">nom est requis<br></small>
-
-                </div>
+                    <small
+                      *ngIf="name?.errors?.['required']"
+                      class="text-danger"
+                      >nom est requis<br
+                    /></small>
+                  </div>
                 </div>
                 <div class="col-lg-6">
                   <input
@@ -54,9 +64,12 @@
                     id="objectif"
                   />
                   <div *ngIf="objectif?.invalid && objectif?.touched">
-                    <small *ngIf="objectif?.errors?.['required']" class="text-danger">objectif est requis<br></small>
-                  
-                </div>
+                    <small
+                      *ngIf="objectif?.errors?.['required']"
+                      class="text-danger"
+                      >objectif est requis<br
+                    /></small>
+                  </div>
                 </div>
               </div>
             </div>
@@ -76,9 +89,12 @@
                     id="program"
                   />
                   <div *ngIf="program?.invalid && program?.touched">
-                    <small *ngIf="program?.errors?.['required']" class="text-danger">Programme est requis<br></small>
-                    
-                </div>
+                    <small
+                      *ngIf="program?.errors?.['required']"
+                      class="text-danger"
+                      >Programme est requis<br
+                    /></small>
+                  </div>
                 </div>
                 <div class="col-lg-6">
                   <input
@@ -88,9 +104,59 @@
                     id="hours"
                   />
                   <div *ngIf="hours?.invalid && hours?.touched">
-                    <small *ngIf="hours?.errors?.['required']" class="text-danger">Heures est requis<br></small>
-                    
+                    <small
+                      *ngIf="hours?.errors?.['required']"
+                      class="text-danger"
+                      >Heures est requis<br
+                    /></small>
+                  </div>
                 </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-lg-6 my-2">
+                  <label for="exampleFormControlFile1">prix : </label>
+                </div>
+                <div class="col-lg-6 my-2">
+                  <label for="exampleFormControlFile1">date de debut :</label>
+                </div>
+                <div class="col-lg-6">
+                  <input
+                    type="text"
+                    class="form-control"
+                    formControlName="price"
+                    id="price"
+                  />
+                  <div *ngIf="name?.invalid && name?.touched">
+                    <small
+                      *ngIf="name?.errors?.['required']"
+                      class="text-danger"
+                      >prix est requis<br
+                    /></small>
+                  </div>
+                </div>
+
+                <div class="col-lg-6">
+                  <input
+                    type="date"
+                    id="start"
+                    name="trip-start"
+                    value="2022-07-22"
+                    min="2022-01-01"
+                    max="2030-12-31"
+                    formControlName="starting_date"
+                    id="starting_date"
+                    class="form-control"
+                  />
+
+                  <div *ngIf="objectif?.invalid && objectif?.touched">
+                    <small
+                      *ngIf="objectif?.errors?.['required']"
+                      class="text-danger"
+                      >objectif est requis<br
+                    /></small>
+                  </div>
                 </div>
               </div>
             </div>
@@ -98,48 +164,73 @@
               <div class="form-group">
                 <div class="row">
                   <div class="col-lg-6 my-2">
-                <label for="exampleFormControlFile1" class="">Formateur :</label>
-                </div>
-                <div class="col-lg-6 my-2">
-                  <label for="exampleFormControlFile1" class="">catégorie :</label>
+                    <label for="exampleFormControlFile1" class=""
+                      >Formateur :</label
+                    >
+                  </div>
+                  <div class="col-lg-6 my-2">
+                    <label for="exampleFormControlFile1" class=""
+                      >catégorie :</label
+                    >
                   </div>
                   <div class="col-lg-6">
-  
-                <select class="form-select" formControlName="idTrainer" id="idTrainer" aria-label="Default select example">
-                  <option selected>selectionner un formateur</option>
-                  <option
-                    *ngFor="let trainer of trainersList; let i = index"
-                    [value]="trainer._id"    
-                  >
-                    {{ trainer.firstname }} {{ trainer.lastname }}
-                  </option>
-                </select>
-                <div *ngIf="idTrainer?.invalid && idTrainer?.touched">
-                  <small *ngIf="idTrainer?.errors?.['required']" class="text-danger">Formateur est requis></small>
-    
-              </div>
+                    <select
+                      class="form-select"
+                      formControlName="idTrainer"
+                      id="idTrainer"
+                      aria-label="Default select example"
+                    >
+                      <option selected>selectionner un formateur</option>
+                      <option
+                        *ngFor="let trainer of trainersList; let i = index"
+                        [value]="trainer._id"
+                      >
+                        {{ trainer.firstname }} {{ trainer.lastname }}
+                      </option>
+                    </select>
+                    <div *ngIf="idTrainer?.invalid && idTrainer?.touched">
+                      <small
+                        *ngIf="idTrainer?.errors?.['required']"
+                        class="text-danger"
+                        >Formateur est requis></small
+                      >
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <select
+                      class="form-select"
+                      formControlName="idCategory"
+                      id="idCategory"
+                      aria-label="Default select example"
+                    >
+                      <option [selected]="true">
+                        selectionner une catégorie
+                      </option>
+                      <option
+                        *ngFor="let category of categoryList; let i = index"
+                        [value]="category._id"
+                      >
+                        {{ category.name }}
+                      </option>
+                    </select>
+                    <div *ngIf="idCategory?.invalid && idCategory?.touched">
+                      <small
+                        *ngIf="idCategory?.errors?.['required']"
+                        class="text-danger"
+                        >catégorie est requis<br
+                      /></small>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-lg-6">
-                <select class="form-select" formControlName="idCategory" id="idCategory" aria-label="Default select example">
-                  <option [selected]="true">selectionner une catégorie</option>
-                  <option
-                    *ngFor="let category of categoryList; let i = index"
-                    [value]="category._id" 
-                  >
-                    {{ category.name }}
-                  </option>
-                </select>
-                <div *ngIf="idCategory?.invalid && idCategory?.touched">
-                  <small *ngIf="idCategory?.errors?.['required']" class="text-danger">catégorie est requis<br></small>
- 
-                  
               </div>
-                </div>
-              
-              </div>
-              </div>
-             
-              <button class="btn btn-primary mt-2" [disabled]="myForm.invalid" type="submit">ajouter</button>
+
+              <button
+                class="btn btn-primary mt-2"
+                [disabled]="myForm.invalid"
+                type="submit"
+              >
+                ajouter
+              </button>
             </div>
           </form>
         </div>
