--- a/src/app/components/public/home/home.component.html
+++ b/src/app/components/public/home/home.component.html
@@ -168,28 +168,22 @@
       <h1 class="mb-5">Cours populaires</h1>
     </div>
     <div class="row g-4 justify-content-center">
-      <div class="col-lg-4 col-md-6 wow fadeInUp" *ngFor="let training of trainingsList" data-wow-delay="0.1s">
-        <div class="course-item bg-light">
+      <div class="col-lg-4 col-md-6 wow fadeInUp" *ngFor="let training of trainingsList; let i=index" data-wow-delay="0.1s">
+        <div *ngIf="i<=2" class="course-item bg-light">
           <div class="position-relative trainer-card overflow-hidden" style="height: 250px">
             <img class="img-fluid image-training" src="{{baseUrl}}{{ training.image }}" alt="" />
             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
               <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
                 style="border-radius: 30px 0 0 30px">Lire La Suite</a>
               <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3"
-                style="border-radius: 0 30px 30px 0">Rejoindre maintenant</a>
+                style="border-radius: 0 30px 30px 0">Rejoindre maintenant </a>
             </div>
           </div>
           <div class="text-center p-4 pb-0 description">
-            <h3 class="mb-0">$149.00</h3>
-            <div class="mb-3">
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small class="fa fa-star text-primary"></small>
-              <small>(123)</small>
-            </div>
-            <h5 class="mb-4">{{ training.name }}</h5>
+            <h3 class="mb-0">{{ training.price }} DT</h3>
+
+            <h5 class="m-1">{{ training.name }}</h5>
+            <p class="m-2 objectif">{{ training.objectif }}</p>
           </div>
           <div class="d-flex border-top">
             <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>{{
@@ -201,7 +195,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-12">
+      <div *ngIf="trainingsList.length > 3" class="col-lg-12">
         <a routerLink="/courses" class="btn btn-primary button py-3 mt-2" href="">Voir plus</a>
       </div>
 
