patch: change favicon and title

--- a/src/app/components/public/home/home.component.html
+++ b/src/app/components/public/home/home.component.html
@@ -188,10 +188,11 @@
           <div class="d-flex border-top">
             <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>{{
               training.category.name }}</small>
-            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>{{
-              training.hours }}</small>
-            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30
-              participants</small>
+            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"> H</i>{{
+              training.hours }} H </small>
+            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>{{
+              training.seat }}
+              places</small>
           </div>
         </div>
       </div>
