--- a/src/app/components/private/shared/trainings/add-training/add-training.component.html
+++ b/src/app/components/private/shared/trainings/add-training/add-training.component.html
@@ -223,7 +223,27 @@
                   </div>
                 </div>
               </div>
-
+              <div class="form-group">
+                <div class="row">
+                  <div class="col-lg-6 my-2">
+                    <label for="exampleFormControlFile1" class=""
+                    >places :</label>
+                    <input
+                    type="text"
+                    class="form-control"
+                    formControlName="seat"
+                    id="seat"
+                  />
+                  <div *ngIf="name?.invalid && name?.touched">
+                    <small
+                      *ngIf="name?.errors?.['required']"
+                      class="text-danger"
+                      >seat est requis<br
+                    /></small>
+                  </div>
+                  </div>
+                </div>
+              </div>
               <button
                 class="btn btn-primary mt-2"
                 [disabled]="myForm.invalid"
