--- a/src/app/components/private/shared/trainers/trainers-list/trainers-list.component.html
+++ b/src/app/components/private/shared/trainers/trainers-list/trainers-list.component.html
@@ -35,7 +35,7 @@
               <table class="fl-table">
                 <thead>
                   <tr>
-                    <th>#</th>
+                    <th>N°</th>
                     <th>prénom</th>
                     <th>nom</th>
                     <th>email</th>
@@ -51,6 +51,13 @@
                     <td>{{ trainer.email }}</td>
                     <td>{{ trainer.speciality }}</td>
                     <td>
+                      <button
+                      class="btn btn-primary mx-2"
+                      style="color: white"
+                      [routerLink]="['/category', trainer._id]"
+                    >
+                      <i class="fa fa-eye" aria-hidden="true"></i>
+                    </button>
                       <button
                         class="btn btn-warning mx-2"
                         [routerLink]="['/modify-trainer', trainer._id]"
