--- a/src/app/components/private/shared/blog/blog-list/blog-list.component.html
+++ b/src/app/components/private/shared/blog/blog-list/blog-list.component.html
@@ -40,7 +40,7 @@
                     <button
                     class="btn btn-primary mx-2"
                     style="color: white"
-                    [routerLink]="['/category', article._id]"
+                    [routerLink]="['/article-list', article._id]"
                   >
                     <i class="fa fa-eye" aria-hidden="true"></i>
                   </button>
