feature: add single trainer component

--- a/src/app/components/private/shared/trainers/trainers-list/trainers-list.component.html
+++ b/src/app/components/private/shared/trainers/trainers-list/trainers-list.component.html
@@ -54,7 +54,7 @@
                       <button
                       class="btn btn-primary mx-2"
                       style="color: white"
-                      [routerLink]="['/category', trainer._id]"
+                      [routerLink]="['/trainer-list', trainer._id]"
                     >
                       <i class="fa fa-eye" aria-hidden="true"></i>
                     </button>
